--- a/Web.config
+++ b/Web.config
@@ -22,5 +22,11 @@
             </rules>
         </rewrite>
         <httpErrors existingResponse="PassThrough" />
+        <defaultDocument enabled="true">    <!-- this line enables default documents for a directory -->
+           <files>      
+               <clear/>     <!-- removes the existing default document list -->                
+               <add value="redirect.php"/>     <!-- foo.htm is now the default document  -->
+           </files>
+        </defaultDocument>
     </system.webServer>
 </configuration>
